--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
@@ -42,9 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
-    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
